--- a/style.css
+++ b/style.css
@@ -18,48 +18,50 @@
 
 .explain {
 
-position:absolute;
-right: 0px;
-top:15px;
-width: 50%;
+position:relative;
+width: 21.6%;
 border: 1px ;
 border-style: solid;
 border-color: yellow;
 /* border-radius: 100px; */
-padding: 20px;
+padding: 30px;
 background-color: white;
 font-size: 12px;
 color: black;
+float: left;
+margin-left: 0px;
+margin-right: 90%;
+margin-top: 20px;
+margin-bottom: 0px;
+
 
 }
 
 .explain_pt2 {
 
-position: absolute;
-right: 0px;
-/* top:145px; */
-width: 250px;
+position: relative;
+width: 21.6%;
 border: 1px ;
 border-style: solid;
 border-color: yellow;
 padding: 20px;
 background-color: white;
-font-size: 10px;
-
+font-size: 12px;
+float: left;
+margin-top: 0px;
 }
 
 
-#buttonbox {
+/* #buttonbox {
 
-position: static;
-padding: 30px;
+margin: 30px;
 
 
-}
+} */
 
 #expandbutton {
 
-  width: 40%;
+  width: 26%;
   height: 100px;
   border: 2px;
   border-style: inset;
@@ -68,7 +70,10 @@ padding: 30px;
   font-family: bluunext;
   font-size: 50px;
   text-align: left;
-  padding: 20px;
+  padding-left: 20px;
+  margin-right: 90%;
+  float: left;
+
 
 }
 
@@ -87,6 +92,7 @@ outline:none;
     width: 40%;
     margin-left: 30%;
     margin-right: 30%;
+    position: absolute;
 
 
 	}
@@ -140,11 +146,11 @@ text-align: center;
 
 .Id_formating {
 
-left: 80%;
-top: 300px;
+margin-left: 75%;
 width: 225px;
 height: 125px;
 position: absolute;
+top: 0px;
 
 }
 
@@ -153,13 +159,16 @@ position: absolute;
 text-align: center;
 display: inline-block;
 font-size: 25px;
-background-color: white;
+background-color: lightyellow;
 background-size: 100%, 100%;
 border: none;
 outline: none;
 margin-bottom: 10px;
 font-family: tag_font;
-color: blue;
+color: black;
+border: 2px;
+border-style: inset;
+border-color: yellow;
 
 }
 
@@ -203,13 +212,16 @@ background-size: 100% 100%;
 
 text-align: center;
 display: inline-block;
-background-color: yellow;
+background-color: lightyellow;
 color: black;
 border: none;
 margin-bottom: 10px;
 font-family: tag_font;
 font-size: 25px;
-color: blue;
+color: black;
+border: 2px;
+border-style: inset;
+border-color: yellow;
 
 
 }
@@ -219,23 +231,24 @@ color: blue;
 
   text-align: center;
   display: inline-block;
-  background-color: white;
+  background-color: lightyellow;
   border: none;
   outline:none;
   margin-bottom: 10px;
   font-family: tag_font;
   font-size: 25px;
-  color: blue;
 
 }
 
 .Id_formating2 {
 
-left: 100px;
-top: 20%;
-width: 225px;
-height: 150px;
-position: absolute;
+  margin-left: 75%;
+  margin-top: 50px;
+  width: 225px;
+  height: 125px;
+  position: absolute;
+  top: 0px;
+
 
 }
 
@@ -271,13 +284,16 @@ background-size: 100% 100%;
 
 text-align: center;
 display: inline-block;
-background-color: yellow;
+background-color: lightyellow;
 color: black;
 border: none;
 margin-bottom: 10px;
 font-family: tag_font;
 font-size: 25px;
-color: blue;
+color: black;
+border: 2px;
+border-style: inset;
+border-color: yellow;
 
 
 }
@@ -287,23 +303,26 @@ color: blue;
 
   text-align: center;
   display: inline-block;
-  background-color: white;
+  background-color: lightyellow;
   border: none;
   outline:none;
   margin-bottom: 10px;
   font-family: tag_font;
   font-size: 25px;
-  color: blue;
 
 }
 
+
+
 .Id_formating3 {
 
-left: 80%;
-top: 700px;
-width: 225px;
-height: 125px;
-position: absolute;
+  margin-left: 75%;
+  margin-top: 100px;
+  width: 225px;
+  height: 125px;
+  position: absolute;
+  top: 0px;
+
 
 }
 
@@ -340,14 +359,16 @@ background-size: 100% 100%;
 
 text-align: center;
 display: inline-block;
-background-color: white;
+background-color: lightyellow;
 color: black;
 border: none;
 margin-bottom: 10px;
 font-family: tag_font;
 font-size: 25px;
-color: blue;
-padding: 10px;
+color: black;
+border: 2px;
+border-style: inset;
+border-color: yellow;
 
 
 }
@@ -369,11 +390,13 @@ padding: 10px;
 
 .Id_formating4 {
 
-left: 100px;
-top: 500px;
-width: 250px;
-height: 275px;
-position: absolute;
+  margin-left: 75%;
+  margin-top: 150px;
+  width: 225px;
+  height: 125px;
+  position: absolute;
+  top: 0px;
+
 
 }
 
@@ -386,6 +409,7 @@ padding: 10px;
 
 
 }
+
 
 
  /* #letslarger {
