fixing more bugs 🐛

--- a/style.css
+++ b/style.css
@@ -775,7 +775,9 @@ padding-left: 20px;
 padding-bottom: 20px;
 font-family: tag_font;
 border: 2px solid yellow;
+line-height: 24px;
 }
+
 
 .finderheading {
 
